--- a/clusters/yellow_nyc_cluster.yml
+++ b/clusters/yellow_nyc_cluster.yml
@@ -6,6 +6,7 @@ variables:
       cluster_name: ""
       spark_version: 15.4.x-scala2.12
       node_type_id: Standard_F4
+      data_security_mode: "SINGLE_USER"
       autoscale:
           min_workers: 1
           max_workers: 1
